# rust_playground

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  output.parquet  pyproject.toml
cli_example/: Cargo.toml
cli_example/src/: main.rs
cli_example_basic/: Cargo.toml
cli_example_basic/src/: main.rs
data_structures/: Cargo.toml
data_structures/src/: main.rs
hello-rust/: Cargo.toml  main
hello-rust/src/: _main.rs  lib.rs  main.rs
pysrc/: main.py  pyrust.py
src/: lib.rs  main.rs
wrapped_example/: Cargo.toml
wrapped_example_py/wrapped_example/: __init__.py
wrapped_example_rs/: Cargo.toml  README.md  pyproject.toml
wrapped_example_rs/python_code/wrapped_example/: __init__.py  python_code.py  wrapped_example_core.pyi
wrapped_example_rs/src/: lib.rs
