[workspace]
resolver = "3"
members = [
    "cli_example",
    "cli_example_basic",
    "wrapped_example_rs"
]

# Optional: prevent Cargo from searching for crates in other folders
exclude = [
    "pysrc",   # your Python code
    "*.ipynb", # notebooks
]

# (optional) you can set shared dependencies if needed
# [workspace.dependencies]
# anyhow = "1.0"
# polars = "0.39"

[workspace.package]
rust-version = "1.89"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
