[tool.poetry]
name = "main_py_repo"
version = "0.1.0"
description = ""
authors = ["mrtstr <martin0strauch@gmail.com>"]
readme = "README.md"
# optional: explicitly declare packages if your code is in a src/ layout
# packages = [
#     { include = "wrapped_example", from = "wrapped_example_py" },
# ]
packages = [{ include = "pycode"},]
[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]

pandas = "^2.2.2"
ipykernel = "^6.29.5"
ipython = "*"
pyarrow = "*"
matplotlib = "*"
tabulate = "*"
scikit-learn = "*"
polars = "*"
# yfinance = "*"
maturin = {version = "*", extras=["patchelf"]}
pre-commit = "*"

[tool.poetry.group.prod]
optional = true

[tool.poetry.group.prod.dependencies]
wrapped_example = { path = "dist/wrapped_example-0.1.0-cp39-abi3-musllinux_1_2_x86_64.whl" }

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
