[package]
name = "my_project"
version = "0.1.0"
edition = "2021"
description = "A sample Rust project"
license = "MIT"


[dependencies]
tokio = { version = "1", features = ["full"] }
# An asynchronous runtime for Rust (async/await support).
chrono = "*"
clap = { version = "4.5", features = ["derive"] }
anyhow = { version = "1.0", features = ["backtrace"] }
color-eyre = "0.6"
rayon = "*"
# --- dataframes ---
arrow = "*"
# # Match pyo3-polars' pyo3 (0.25 as of 0.24.0)
# pyo3 = { version = "0.25", features = ["extension-module"] }

# # pyo3-polars 0.24.0 (enable lazy if you need it)
# pyo3-polars = { version = "0.24.0", features = ["lazy"] }

# Add a direct Polars dep to *unify features* and turn on diagonal_concat
polars = { version = "0.51", default-features = false, features = [
  "lazy",
  "parquet",
  "fmt",
  "diagonal_concat",
  "dtype-array"      # <-- IMPORTANT
] }
# --- IO helpers ---
csv = "1"                                                        # data IO
serde = { version = "1", features = ["derive"] }
# for serializing and deserializing JSON, YAML, TOML
parquet = "*"
datafusion = "*"

# Nice builder ergonomics; async readers/writers
opendal = "*"

# --- NumPy-like arrays ---
ndarray = { version = "0.16.0", features = ["approx", "rayon"] }   # n-d arrays + parallel iter (via rayon)
ndarray-linalg = "0.17.0"                                          # BLAS/LAPACK-based linalg (SVD, eig, etc.)

# # --- Random & statistics ---
# rand = "0.9.2"
# rand_distr = "0.5.1"
# statrs = "0.18.0"                                                  # distributions, basic tests, stats

# --- Optimization ---
# argmin = "*"           # solvers (GD, BFGS, LBFGS, Newton, etc.)

# # --- FFT / signal processing ---
# rustfft = "6"
# realfft = "3"

# # --- Sparse matrices ---
# sprs = "0.11"

# # --- Integration / ODEs ---
# quad = "0.1.2"                                                     # numerical integration (1D)

# # --- Parallelism & perf ---
# rayon = "1.10"

# # --- (Optional) plotting & ML ---
# plotters = "0.3"                                                 # plotting
# # linfa = "0.7"                                                    # scikit-learn-ish ML toolkit (optional)


[dev-dependencies]
criterion = "0.7.0"

[features]
default = ["cli"]
cli = []